--- a/src/App/App.css
+++ b/src/App/App.css
@@ -8,20 +8,22 @@ body {
 body {
     height: 100vh;
 }
-
-body,
 .App {
+    width: 90vw;
+    height: 80vh;
+}
+
+.App,
+body {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .App {
-    width: 90vw;
-    height: 80vh;
-}
-
-.App {
     background-color: rgb(243, 234, 227);
-    box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+    box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
+        rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+        rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+    border-radius: 10px;
 }
