--- a/src/components/card/style.css
+++ b/src/components/card/style.css
@@ -1,10 +1,11 @@
 .Card {
-    display: inline-flex;
+    display: flex;
+    width: 50%;
+    height: 80%;
 }
 
-.Card__image,
 .Card__info {
-    width: 200px;
+    padding: 30px;
 }
 
 .Card__info {
