--- a/src/App/App.css
+++ b/src/App/App.css
@@ -21,7 +21,7 @@ body {
 }
 
 .App {
-    background-color: rgb(243, 234, 227);
+    background-color: hsl(30, 38%, 92%);
     box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
         rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
         rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
